# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> README, catalyst:
  Updated README a bit and rolling 2.0.6_pre12 for testing.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/create-iso.sh:
  Removed any further checks for clst_fstype and making sure everybody is
  using ${mkisofs_zisofs_opts}.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  The default theme for GNOME is now Clearlooks, so we can remove the theme
  code, but we still want to set the font size.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  We need to put quotes around ${user_comment} or useradd gets confused.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Changed make_destpath to write out ROOT to make.conf, rather than (ab)using
  the environment.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/kmerge.sh:
  Added an additional make_destpath call to kmerge.sh so it'll export ROOT=/
  prior to running genkernel. This is catalyst 2.0.6_pre11 for testing.

  04 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/create-iso.sh:
  Bash fscking sucks, so we have to compromise on this code reduction solution
  a bit. It's still far better than it was

  03 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/create-iso.sh:
  Don't escape quotes when actually running the command

  02 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/kmerge.sh:
  Pass clst_root_path instead of ROOT to run_merge, since it overrides ROOT

  29 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/kmerge.sh:
  Use -L instead of -l in test for symlink

  29 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-controller.sh: